--- a/webroot/setup.html
+++ b/webroot/setup.html
@@ -24,7 +24,7 @@
         </p>
         <p><input type="text" id="bridgeAddress"/></p>
         <p id="bridgeAddressErrorMessage" class="errorMessage"></p>
-        <p><button onclick="setupUI.autoDetectBridge()">Auto-detect</button></p>
+        <p><button onclick="setupUI.autodetectBridge()">Auto-detect</button></p>
         <button onclick="setupUI.validateAddress()">Validate</button>
         <button onclick="setupUI.abort()">Abort</button>
       </div>
