--- a/webroot/setup.html
+++ b/webroot/setup.html
@@ -3,6 +3,7 @@
   <head>
     <title>Huenicorn initial setup</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml">
   </head>
 
   <body>
