Add logo to webroot data + declare embeddedFiles inline instead of static

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Huenicorn control interface</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml">
+    <link rel="icon" href="logo.svg" sizes="any" type="image/svg+xml">
   </head>
 
   <body>
